fix: oops that was too narrow

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ div.photo_section {
     text-align: center;
     margin: 0 auto;
     padding: 20px 0;
-    max-width: 500px
+    max-width: 650px
 }
 
 div.mission {
